[package]
name = "marlowe"
version = "0.1.4"
edition = "2021"

[lib]
name = "marlowe"
crate-type = ["cdylib"]
path = "src/lib.rs"


[dependencies] 
pyo3 = { version = "0.19.1", features = ["full"] }
#marlowe_lang = "*"
#marlowe_lang = { git = "https://github.com/olofblomqvist/marlowe-rs", features=["utils","unstable"], default-features = false }
marlowe_lang = {version="0.2.1", features=["utils","unstable"], default-features = false }
serde_json = "1.0.103"
serde = "1.0.171"