[package]
name = "marlowe"
version = "0.1.6"
edition = "2021"

[lib]
name = "marlowe"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies] 
pyo3 = { version = "0.21.2", features = ["full"] }
marlowe_lang = {version="0.3.2", features=["utils","unstable"], default-features = false }
serde_json = "1.0.117"
serde = "1.0.202"
ahash = "0.8.11"
