[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[[lib]]
name = "mybin"
path = "src/bin.rs"
[[bin]]
name = "mybin"
path = "src/bin.rs"

[project]
name = "marlowepy"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
