[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[[lib]]
name = "marlowe"
path = "src/lib.rs"

[project]
name = "marlowe"
requires-python = ">=3.7"
description = "marlowe-rs bindings for using cardano marlowe in python"
repository = "https://github.com/olofblomqvist/marlowe-py"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
